# deno-cct

./: .gitignore  LibraryMeta.ts  README.md  data.ts  dcct  dcct.bat  deps.ts  mod.ts  teste_rsc.ts
.old/: .gitignore  main.ts
.old/base/: cache.ts  downloadAsync.ts  exit.ts  interfaces.ts
.old/betterlink/: package.ts
.old/irequirement/: asm86.ts  cmake.ts  host_toolchain.ts  xcode.ts
.old/itool/: cmake_apple.ts
.old/tcf/: _.ts  any.ts  mobile.ts
base/: agnosticFS.ts  cache.ts  cli.ts  download.ts  exit.ts  target.ts  utils.ts
betterlink/: README.md  betterlink.ts  interface.ts  queue.ts
betterlink/repo/: _.ts  zlib.ts
compile/: android.ts  apple.ts  linux.ts  mod.ts  windows.ts
compile/common/: cmake.ts  go.ts
exec/: template.ts  update.ts
irequirement/: android.ts  asm86.ts  cmake.ts  host_toolchain.ts  linux-arm_toolchain.ts  vcpp.ts  xcode.ts
irequirement/auxi/: cmake_parse.ts  vcpp_runtime.ts
itool/: cmake_android.ts  cmake_emsdk.ts  cmake_linux.ts  cmake_microsoft.ts  others.ts
lib2/: _library.ts  compat.ts  download.ts  utils.ts
lib2/boost/: 1.85.0.ts
lib2/brotli/: 1.0.9.ts  download.ts
lib2/bzip2/: 1.0.8.ts  download.ts
lib2/freetype/: 2.13.3.ts  download.ts
lib2/glfw/: 3.3.9.ts  download.ts
lib2/glm/: 0.9.9.8.ts  download.ts
lib2/glslang/: 1.3.275.0.ts
lib2/harfbuzz/: 10.1.0.ts  download.ts
lib2/libpng/: 1.6.44.ts  download.ts
lib2/libreSSL/: 3.5.2-old.ts  3.5.2.ts  3.9.2.ts  autogen.ts  download.ts
lib2/spirv-cross/: 1.3.275.0.ts
lib2/spirv-tools/: 1.3.275.0.ts
lib2/tint/: 13.02.24.ts  (+1 more)
lib2/vulkan/: 1.3.268.ts  download.ts  (+1 more)
libs/: LibraryMeta.ts  brotli.ts  data.ts  glm.ts  libreSSL.ts  zlib.ts
package/: README.md  api_package.ts  main.ts
rsc/: mod.ts
rsc/lib2/bzip2/: CMakeLists.txt
tcf/: _.ts  _update.bat  _update.ts  any.ts  desktop.ts  mobile.ts  others.ts
util/: agnosticFS.ts  cache.ts  download.ts  exec.ts  exit.ts  git.ts  infs.ts  kvfile.ts  server.ts  target.ts  utils.ts  uwpInjectAssets.ts  xcodeInjectARC.ts
(+23 files in other folders)
